--- a/src/styles/ChecklistPage.scss
+++ b/src/styles/ChecklistPage.scss
@@ -9,6 +9,19 @@
     padding: 10px; 
     width: 100%; 
     z-index: 1; 
+    border-radius: 5px; 
+}
+
+.nameChecklist {
+    background-color: $softPink;
+    width: 250px; 
+    border-radius: 5px; 
+    color: $darkBlue; 
+    display: flex; 
+    justify-content: left;
+    padding-left: 20px; 
+    font-weight: 200;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .checklistHeader {
@@ -17,7 +30,7 @@
     padding: 40px;
     margin-top: 20px; 
     margin-bottom: 50px; 
-    border-radius: 5px 5px 0px 0px; 
+    border-radius: 5px; 
 }
 
 .legChecklist {
@@ -38,5 +51,36 @@
     font-weight: 200; 
     display: flex; 
     justify-content: center;
- 
+}
+
+.legChecklist3 {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #31446675;
+    width: 100px; 
+    border-radius: 5px;
+    font-weight: 200;
+    display: flex; 
+    justify-content: center;
+}
+
+.legChecklist4 {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #314466;
+    color: white; 
+    width: 100px; 
+    border-radius: 5px; 
+    font-weight: 200; 
+    display: flex; 
+    justify-content: center; 
+}
+
+.legChecklist5 {
+    font-family: Arial, Helvetica, sans-serif;
+    border: solid 2px #314466; 
+    color: $darkBlue; 
+    width: 100px; 
+    border-radius: 5px;
+    font-weight: 200;
+    display: flex; 
+    justify-content: center;
 }
